; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_animation.c_get_line_display_ticks.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_animation.c_get_line_display_ticks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TICKER_SPEED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @get_line_display_ticks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_line_display_ticks(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  store i64 %0, i64* %2, align 8
  store float 1.000000e+03, float* %3, align 4
  %5 = load i64, i64* %2, align 8
  %6 = uitofp i64 %5 to float
  %7 = fmul float %6, 6.000000e+01
  %8 = fmul float %7, 1.000000e+03
  %9 = fmul float %8, 1.000000e+03
  %10 = load float, float* %3, align 4
  %11 = fdiv float %9, %10
  store float %11, float* %4, align 4
  %12 = load float, float* %4, align 4
  %13 = load i64, i64* @TICKER_SPEED, align 8
  %14 = sitofp i64 %13 to float
  %15 = fdiv float %12, %14
  %16 = fptoui float %15 to i64
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
